syntax = "proto3";

package covid19api;

option go_package = ".;covid19api";
option java_multiple_files = true;
option java_outer_classname = "PublicQueryProto";
option java_package = "org.covid19.api";

// import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

import "case.def.proto";
import "flight.def.proto";

// PublicQuery defines public-facing data service (mostly read only)
service PublicQuery {
    rpc IsServiceReady (google.protobuf.Empty) returns (google.protobuf.BoolValue) {  // Health check
//        option (google.api.http) = {
//            get: "/v1/public/_healthz"
//        };
    };

    rpc GetCases (GetCasesRequest) returns (GetCasesResponse) { // Get cases
//        option (google.api.http) = {
//            get: "/v1/public/cases"
//        };
    }

    rpc GetCaseStats (GetCaseStatsRequest) returns (GetCaseStatsResponse) { // Get case states
//        option (google.api.http) = {
//            get: "/v1/public/case/stats"
//        };
    }

    rpc GetFlights (GetFlightsRequest) returns (GetFlightsResponse) { // Get flights
//        option (google.api.http) = {
//            get: "/v1/public/flights"
//        };
    }
}
